# django-batch-example

./: .env.example  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run.sh
.github/workflows/: publish-docker.yml
django_batch_example/: asgi.py  settings.py  settings_common.py  settings_dev.py  urls.py  wsgi.py
greeting/management/commands/: greet.py
